pathway (1.15.12.5735)  experimental; urgency=high

  * Common:TD-4758 Enable hyphenation for Scripture.
  * Common:TD-4780 Spaces in username leads to problems
  * Epub/HTML5:TD-1812 Epub validation errors
  * Epub/HTML5:TD-4557 Fix Scripture epub creation with PathwayB
  * Epub/HTML5:TD-4689 Epub too much space between entries
  * Epub/HTML5:TD-4744 Epub validator error in linux
  * Epub/HTML5:TD-4784 Improve file splitting, Update TOC
  * Epub/HTML5:Td-4791 Fix audio export for HTML5
  * Epub/HTML5:TD-4793 HTML5 add simple search
  * Epub/HTML5:Make a separate cross-platform option for HTML5
  * General:TD-4681 Handle audio writing system export
  * General:TD-4744 Validation errors appear while exporting
  * General:TD-4770 Fix when xhtml has insignificant line breaks
  * General:TD-4775 Pass Paratext database name to PathwayExport
  * General:TD-4785 Add logic to handle css overrides.
  * General:TD-4792 Forming Export Directory name
  * Help:TD-4796 Help/More Help still opens web to old Pathway site
  * Help:TD-4802 Update preprocessing descriptions
  * Linux:TD-4725 fix crash from missing name of bold font
  * Linux:TD-4738 Creating 'Copy of' and 'Custom' Stylesheets ...
  * Linux:TD-4744 adjust validator to have extra slash for linux
  * Linux:TD-4454 Text Merges in the Prince Pdf Output If I set Stylesheet as Two Column
  * Linux:TD-4766 mono-basic4-sil dependency error
  * LO/OO:TD-4269 Running Header appears twice in the page view
  * LO/OO:TD-4301 Space after footnote marker before period
  * LO/OO:TD-4396 Pathway justify not working on minor entries
  * LO/OO:TD-4708 headword not bold
  * LO/OO:TD-4721 Formatting via pathway is not following flex
  * LO/OO:TD-4739 MinorEntryVariant Color override and extra padding removed
  * LO/OO:TD-4740 Extended Note data content is not appear
  * LO/OO:TD-4741 Base font size
  * LO/OO:TD-4755 Primary entry references missing in output
  * LO/OO:TD-4773 Header Font size dropdown is empty